# WhyIsMyBuildSoSlow

./: .gitignore  CMakeLists.txt  README.md
include_paths/: CMakeLists.txt  README.md  boxplot.py  build_example_project.sh  main.cpp  time_outputs.sh
includes/: CMakeLists.txt  README.md  fast.cpp  fast.h  slow.cpp  slow.h
templates/: CMakeLists.txt  README.md  a.cpp  a.h  b.cpp  b.h  foo.cpp  main.cpp  pch.h  templates.hpp
